--- a/package.json
+++ b/package.json
@@ -5,5 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "jquery": "^3.6.0"
-  }
+  },
+  "repository": "git@github.com:czh-zz/mvc-demo1.git",
+  "author": "chenzh <515740090@qq.com>"
 }
